# polynomial-solver

./: .gitignore  .gitmodules  CMakeLists.txt
src/: equation.cpp  equation.hpp  main.cpp  polynomial.cpp  polynomial.hpp  term.cpp  term.hpp
